--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>Hello Extensions</h1>
+    <h1>Paper Summarize Extensions</h1>
     <script src="popup.js"></script>
   </body>
 </html>
