--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,30 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <h1>Paper Summarize Extensions</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Extension Popup</title>
+    <style>
+        body {
+            width: 200px;
+            padding: 10px;
+            font-family: Arial, sans-serif;
+        }
+
+        button {
+            display: block;
+            margin: 10px 0;
+            padding: 10px;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <h3>Chrome Extension</h3>
+    <button id="button1">Button 1</button>
+    <button id="button2">Button 2</button>
+
     <script src="popup.js"></script>
-  </body>
+</body>
 </html>
+
